<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/nanodegreePortfolio"
    android:background="#ffd6e3ff">

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/app1_button"
        android:id="@+id/button1"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:background="#ffffbf43"
        android:onClick="spotifyStreamerEvent" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/app2_button"
        android:id="@+id/button2"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:background="#ffffbf43"
        android:onClick="superDuoEvent" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/app4_button"
        android:id="@+id/button3"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:background="#ffffbf43"
        android:onClick="buildItBiggerEvent" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/app5_button"
        android:id="@+id/button4"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:background="#ffffbf43"
        android:onClick="xyzReaderEvent" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/app6_button"
        android:id="@+id/button5"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:background="#ffff5196"
        android:onClick="capstoneEvent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/landing_title"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />


</RelativeLayout>
